force-app/main/default/objects/Damage__c/fields/Amount_of_pictures__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_pictures__c</fullName>
    <label>Amount of pictures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>