force-app/main/default/objects/Damage__c/fields/Causer__c.field-meta.xml
<CustomField>
    <fullName>Causer__c</fullName>
    <label>Causer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>