force-app/main/default/objects/Damage__c/fields/Damage_group__c.field-meta.xml
<CustomField>
    <fullName>Damage_group__c</fullName>
    <label>Damage group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Select All</fullName>
            </value>
            <value>
                <fullName>Car body</fullName>
            </value>
            <value>
                <fullName>Lightning System</fullName>
            </value>
            <value>
                <fullName>Major Damage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Technical Area</fullName>
            </value>
            <value>
                <fullName>Tyres</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>