force-app/main/default/objects/Damage__c/fields/Damage_Number__c.field-meta.xml
<CustomField>
    <fullName>Damage_Number__c</fullName>
    <externalId>true</externalId>
    <label>Damage Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>