force-app/main/default/objects/Damage__c/fields/Damage_Registration_City__c.field-meta.xml
<CustomField>
    <fullName>Damage_Registration_City__c</fullName>
    <label>Damage Registration City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>