force-app/main/default/objects/Damage__c/fields/Damage_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Damage_Registration_Date__c</fullName>
    <label>Damage Registration Date</label>
    <type>Date</type>
</CustomField>