force-app/main/default/objects/Damage__c/fields/Damage_Rental_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Damage_Rental_Agreement__c</fullName>
    <label>Damage Rental Agreement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>