force-app/main/default/objects/Damage__c/fields/eTurn_Movement__c.field-meta.xml
<CustomField>
    <fullName>eTurn_Movement__c</fullName>
    <label>eTurn Movement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>