force-app/main/default/objects/Damage__c/fields/fixedDate__c.field-meta.xml
<CustomField>
    <fullName>fixedDate__c</fullName>
    <label>Fixed Date</label>
    <type>Date</type>
</CustomField>