force-app/main/default/objects/Damage__c/fields/Initial_Reporter__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reporter__c</fullName>
    <label>Initial Reporter</label>
    <length>50</length>
    <type>Text</type>
</CustomField>