force-app/main/default/objects/Damage__c/fields/isFixed__c.field-meta.xml
<CustomField>
    <fullName>isFixed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is fixed?</label>
    <type>Checkbox</type>
</CustomField>