force-app/main/default/objects/Damage__c/fields/Object_number__c.field-meta.xml
<CustomField>
    <fullName>Object_number__c</fullName>
    <label>Object number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>