force-app/main/default/objects/Damage__c/fields/Repair_Decision__c.field-meta.xml
<CustomField>
    <fullName>Repair_Decision__c</fullName>
    <label>Repair Decision</label>
    <length>50</length>
    <type>Text</type>
</CustomField>