force-app/main/default/objects/Damage__c/fields/Reported_User__c.field-meta.xml
<CustomField>
    <fullName>Reported_User__c</fullName>
    <label>Reported User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>