force-app/main/default/objects/Damage__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>