force-app/main/default/objects/Damage__c/fields/Severity_number__c.field-meta.xml
<CustomField>
    <fullName>Severity_number__c</fullName>
    <label>Severity number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>