force-app/main/default/objects/Damage__c/fields/Side_of_car__c.field-meta.xml
<CustomField>
    <fullName>Side_of_car__c</fullName>
    <label>Side of car</label>
    <length>50</length>
    <type>Text</type>
</CustomField>