force-app/main/default/objects/Damage__c/fields/Side_of_Car_number__c.field-meta.xml
<CustomField>
    <fullName>Side_of_Car_number__c</fullName>
    <label>Side of Car number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>