force-app/main/default/objects/Damage__c/fields/Type_number__c.field-meta.xml
<CustomField>
    <fullName>Type_number__c</fullName>
    <label>Type number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>